--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,9 @@ $amber:				#FFC107;
 $orange: 			#FF9800;
 $bluegrey:		#607D8B;
 $grey:				#9E9E9E;
+$grey:				#9E9E9E;
+$grey:				#9E9E9E;
+$light:				#FAFAFA;
 
 // Typhography
 $font-primary: 'Montserrat', sans-serif;
